[gd_scene load_steps=4 format=3 uid="uid://bbd3hq8j2e1o3"]

[ext_resource type="Script" path="res://UI/Lobby/lobby.gd" id="1_drlkp"]
[ext_resource type="PackedScene" uid="uid://dyxkn7iwmi5bk" path="res://3D/Player/player.tscn" id="2_eopma"]
[ext_resource type="PackedScene" uid="uid://b3sw25dinxbc5" path="res://UI/Lobby/LobbyManagerUI/lobby_manager_ui.tscn" id="2_pphnt"]

[node name="Lobby" type="Node"]
script = ExtResource("1_drlkp")
player_scene = ExtResource("2_eopma")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LobbyManagerUI" parent="CanvasLayer" instance=ExtResource("2_pphnt")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 1
grow_vertical = 1
size_flags_vertical = 3

[node name="MapContainer" type="Node" parent="."]

[node name="PlayersContainer" type="Node" parent="."]

[node name="MapSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://3D/Maps/Map1/map_1.tscn", "res://3D/Maps/Map2/map_2.tscn")
spawn_path = NodePath("../MapContainer")

[node name="PlayersSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://3D/Player/player.tscn")
spawn_path = NodePath("../PlayersContainer")

[connection signal="AddedPlayer" from="CanvasLayer/LobbyManagerUI" to="." method="_on_lobby_manager_ui_added_player"]
[connection signal="ClearMap" from="CanvasLayer/LobbyManagerUI" to="." method="_on_lobby_manager_ui_clear_map"]
[connection signal="MapSelected" from="CanvasLayer/LobbyManagerUI" to="." method="_on_lobby_manager_ui_map_selected"]
[connection signal="RemovedPlayer" from="CanvasLayer/LobbyManagerUI" to="." method="_on_lobby_manager_ui_removed_player"]
[connection signal="StartGame" from="CanvasLayer/LobbyManagerUI" to="." method="_on_lobby_manager_ui_start_game"]
